mod order, process

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -21,6 +21,6 @@
 <!--스크립트 영역-->
 <script th:src="@{/js/bootstrap.bundle.js}"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<th:block layout:fragment="script"></th:block>
+<th:block layout:fragment="scripts"></th:block>
 </body>
 </html>
