gauge chart is making...4

--- a/src/main/resources/templates/fragments/gauge.html
+++ b/src/main/resources/templates/fragments/gauge.html
@@ -124,8 +124,8 @@
                 new GaugeChart(el, params).init();
             });
 
-            // 2) Random 버튼 (기존)
-            $('#random').click(() => { … });
+            // // 2) Random 버튼 (기존)
+            $('#random').click(() => {  });
 
             // 3) 소켓 연결 & 실시간 업데이트
             const socket = io('http://localhost:5000', { transports: ['polling'] });
