--- a/src/main/resources/static/css/gauge.css
+++ b/src/main/resources/static/css/gauge.css
@@ -7,41 +7,26 @@
 
 .gauge-container {
     display: flex;
+    flex-wrap: wrap;            /* 창 좁아지면 줄 바꿈 */
     justify-content: space-around;
     align-items: center;
     padding: 20px;
 }
-/* 여기를 300×220으로 늘립니다 */
 .gauge {
-    width: 300px;
-    height: 220px;
+    flex: 0 0 300px;            /* grow:0, shrink:0, basis:300px */
+    width: 300px;               /* 고정 너비 */
+    height: 220px;              /* 고정 높이 */
 }
-
-
-
 /* SVG 내부 스타일 (DevExtreme 클래스명 기준) */
-.gauge .dxg-range.dxg-background-range {
-    fill: url(#gradientGauge);
-}
 
 .gauge .dxg-line {
     transform: scaleX(1.04) scaleY(1.03) translate(-4px,-4px);
 }
 .gauge .dxg-line path:first-child,
 .gauge .dxg-line path:last-child {
-    display: none;
+    /*display: none;*/
 }
-.gauge .dxg-line path:nth-child(2),
-.gauge .dxg-line path:nth-child(6) {
-    stroke: #FF8228;
-}
-.gauge .dxg-line path:nth-child(3),
-.gauge .dxg-line path:nth-child(5) {
-    stroke: lightgreen;
-}
-.gauge .dxg-line path:nth-child(4) {
-    stroke: green;
-}
+
 
 .gauge .dxg-elements text:first-child {
     transform: translate(19px,13px);
@@ -65,5 +50,5 @@
     transform: translate(0,-109px);
 }
 .gauge .dxg-value-indicator .dxg-spindle-hole {
-    fill: darkgray;
+    fill: #4166f5;
 }
